--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ SMTP_PASSWORD=aaaa bbbb cccc dddd
 RESET_TOKEN_TTL=3600
 SESSION_SECRET=devsecret
 GLOBAL_PREFIX=stage
+API_LOCAL_PORT=56565 #for docker ports
