--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
     "class-validator": "^0.14.0",
     "connect-mongo": "^5.1.0",
     "express-session": "^1.17.3",
+    "fastq": "^1.17.1",
     "firebase-admin": "^11.11.0",
     "googleapis": "^128.0.0",
     "joi": "^17.10.2",
