update sos, init socket

--- a/server/package.json
+++ b/server/package.json
@@ -27,8 +27,10 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/schedule": "^3.0.4",
     "@nestjs/swagger": "^7.1.12",
+    "@nestjs/websockets": "^10.3.3",
     "@typegoose/typegoose": "^11.5.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
